      - Fixed undefined behavior in handling duplicated downloads.
        Fixes a regression introduced in 2.0.0~alpha1.
    - cache:
      - Apply an additional pin priority penalty for not automatic releases.
    - Set of close-on-exec flag changes above Closes: #619650. Thanks to
      Jonathan Nieder for the report and an initial patch set.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 23 Mar 2011 09:59:32 +0200

cupt (2.0.0~beta2) experimental; urgency=low

  * console:
    - Action preview prompt: support 'ProcessTriggers' action.
    - New experimental subcommand 'tar-metadata'.
    - 'showsrc':
      - Output also Uploaders when not empty. Fixes a regression introduced
        in 2.0.0~alpha1.
    - When selecting a version by archive/codename, throw an error if more
      than one matching version is found.
  * lib:
    - cache/binaryversion:
      - 'isInstalled': fixed crash when a version has no sources.
    - system/resolvers/native:
      - Don't attempt to synchronize installed versions, reverting to the
        behavior of cupt 1.x.
      - Optimized solutions' selecting and dropping.
      - Reduced a bit CPU and RAM overhead when tracking reasons is on.
      - Clean and verify the solution only before the proposing.
    - system/resolver:
      - 'SynchronizationReason': added the field 'version'.
      - 'SynchronizationReason': renamed the field 'packageName' to
        'relatedPackageName'.
    - system/worker:
      - 'updateReleaseAndIndexData': release the lock only after post-actions
        are run.
      - 'updateReleaseAndIndexData': honor the option
        'apt::get::list-cleanup'. (Closes: #610285)
      - 'Action': new value 'ProcessTriggers'.
      - Now tries to run all triggers before the main action set.
    - system/state:
      - Don't give an error anymore on packages in 'triggers-awaited' and
        'triggers-pending' states. (Closes: #602263)
    - config:
      - Recognize the option 'apt::get::list-cleanup'.