@@ -36,22 +36,13 @@ class Package
 	Package(const Package&);
 	Package& operator=(const Package&);
  protected:
-	shared_ptr< const string > _binary_architecture; ///< binary architecture
+	/// @cond
+	shared_ptr< const string > _binary_architecture;
 
-	/// gets list of versions
 	vector< shared_ptr< Version > > _get_versions() const;
-	/// builds a new version out of InitializationParameters
-	/**
-	 * Should be re-implemented in subclasses.
-	 * @return built Version
-	 */
 	virtual shared_ptr< Version > _parse_version(const Version::InitializationParameters&) const = 0;
-	/// is architecture of the version appropriate for the container?
-	/**
-	 * Should be re-implemented in subclasses.
-	 */
 	virtual bool _is_architecture_appropriate(const shared_ptr< const Version >&) const = 0;
-
+	/// @endcond
  public:
 	/// constructor
 	/**
