@@ -30,8 +30,10 @@ namespace cache {
 class SourcePackage: public Package
 {
  protected:
+	/// @cond
 	virtual shared_ptr< Version > _parse_version(const Version::InitializationParameters& initParams) const;
 	virtual bool _is_architecture_appropriate(const shared_ptr< const Version >&) const;
+	/// @endcond
  public:
 	/// constructor
 	/**
