@@ -44,8 +44,12 @@ cupt (2.0.0~rc1~) UNRELEASED; urgency=low
       - Apply an additional pin priority penalty for not automatic releases.
     - Set of close-on-exec flag changes above Closes: #619650. Thanks to
       Jonathan Nieder for the report and an initial patch set.
+  * doc:
+    - reference:
+      - Removed protected members of cupt::cache::Package and its subclasses
+        from the documentation, they exist for internal usage only.
 
- -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 23 Mar 2011 09:59:32 +0200
+ -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 02 Apr 2011 19:51:23 +0300
 
 cupt (2.0.0~beta2) experimental; urgency=low
 
